name:                hs-game
version:             0.1.0.0
author:              Vsevolod Kvachev
maintainer:          rasielll@gmail.com
cabal-version:       >=1.10
build-type:          Simple

executable game
  hs-source-dirs:      src
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  main-is:             Main.hs
  other-modules:       Common
                       Level
                       World
                       GameState
                       Input
                       Drawable
                       Camera
                       Actor
                       Character
                       Rendering
                       Types
  build-depends:       base
                     , sdl2
                     , sdl2-image
                     , monad-loops
                     , text
                     , array
                     , clock
                     , formatting
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings

