name:                hs-game
version:             0.1.0.0
author:              Vsevolod Kvachev
maintainer:          rasielll@gmail.com
cabal-version:       >=1.10
build-type:          Simple

executable game
  hs-source-dirs:      src
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  main-is:             Main.hs
  other-modules:       Common
                       Level
                       World
                       GameState
                       Input
                       Drawable
                       Camera
                       Actor
                       Audio
                       Character
                       Rendering
                       Types
                       Data
                       Counter
                       Bot
                       SpriteSheet
                       Config
  build-depends:       base
                     , sdl2
                     , sdl2-image
                     , sdl2-mixer
                     , unordered-containers
                     , template-haskell
                     , monad-loops
                     , text
                     , vector
                     , array
                     , HTTP
                     , yaml
                     , linear
                     , random
                     , containers
                     , clock
                     , formatting
                     , network-uri
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings

